build/log/idf_py_stderr_output_65346
/Users/macbookair/Documents/projects/ESP32-3248S035-LVGL-v8/main/main.cpp: In function 'void app_main()':
/Users/macbookair/Documents/projects/ESP32-3248S035-LVGL-v8/main/main.cpp:35:5: warning: missing initializer for member 'esp_timer_create_args_t::arg' [-Wmissing-field-initializers]
   35 |     };
      |     ^
/Users/macbookair/Documents/projects/ESP32-3248S035-LVGL-v8/main/main.cpp:35:5: warning: missing initializer for member 'esp_timer_create_args_t::dispatch_method' [-Wmissing-field-initializers]
/Users/macbookair/Documents/projects/ESP32-3248S035-LVGL-v8/main/main.cpp:35:5: warning: missing initializer for member 'esp_timer_create_args_t::skip_unhandled_events' [-Wmissing-field-initializers]
/Users/macbookair/Documents/projects/ESP32-3248S035-LVGL-v8/main/main.cpp:41:5: error: 'create_friend_list_screen' was not declared in this scope
   41 |     create_friend_list_screen();
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~
/Users/macbookair/Documents/projects/ESP32-3248S035-LVGL-v8/main/main.cpp: In function 'void friend_clicked_cb(lv_event_t*)':
/Users/macbookair/Documents/projects/ESP32-3248S035-LVGL-v8/main/main.cpp:252:40: error: invalid conversion from 'void*' to 'lv_obj_t*' {aka '_lv_obj_t*'} [-fpermissive]
  252 |     lv_obj_t *btn = lv_event_get_target(e);
      |                     ~~~~~~~~~~~~~~~~~~~^~~
      |                                        |
      |                                        void*
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj] Error 1
make[1]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [all] Error 2
